Adjusted sticky navigation CSS to prevent text overlap at the top of the header (#340)

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -364,9 +364,9 @@ a {
   flex-direction: row;
   flex-wrap: wrap-reverse;
   margin: 0 calc(-1 * var(--side-offset)) 1.2rem;
-  padding: 0.8rem var(--side-offset);
+  padding: 0.8rem var(--side-offset) 0.65rem;
   position: sticky;
-  top: -1.7rem;
+  top: -1.95rem;
   z-index: 10;
 }
 @media (max-width: 640px) {
